--- a/Proyectov2.0/Proyectov1.0/app/src/main/AndroidManifest.xml
+++ b/Proyectov2.0/Proyectov1.0/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!-- Para poder usar el API de Google MAPS -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <!-- Para poder usar el API de Facebook -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
